Estandarizacion campos esta activo

--- a/ConsultorioAplicacionWeb/Views/Menu/Eliminar.cshtml
+++ b/ConsultorioAplicacionWeb/Views/Menu/Eliminar.cshtml
@@ -42,7 +42,7 @@
                         Estado
                     </dt>
                     <dd class="col-sm-10">
-                        @(Model.EsActivo == 1 ? "Activo" : "Inactivo")
+                        @(Model.EstaActivo == 1 ? "Activo" : "Inactivo")
                     </dd>
                 </dl>
 
